Updated the automated email functionality to allow for html markup. You can now embedded a gif and html table in the body of the email. Updated some naming conventions for files. Changed the way I handled data downloads, before all datasets were found then downloaded one by one. Now one date range is provided at a time for analysis, which saves a lot of time because we don't need to find all of the datasets to just analyze the first one, then the second, etc. Included functionality for generating a GIF of the darks just analyzed prior to deleting them, this makes debugging problem datasets much easier since the data are deleted once processing completes.

--- a/CONFIG/pipeline_config.yaml
+++ b/CONFIG/pipeline_config.yaml
@@ -3,8 +3,8 @@ ACS_WFC:
     - ./../crrejtab/ACS/mastDownload/HST/*/*flt.fits
   hdf5_files:
     - ./../data/ACS/acs_cr_affected_pixels.hdf5
-    - ./../data/ACS/acs_shapes.hdf5
-    - ./../data/ACS/acs_sizes.hdf5
+    - ./../data/ACS/acs_cr_shapes.hdf5
+    - ./../data/ACS/acs_cr_sizes.hdf5
     - ./../data/ACS/acs_cr_rate.hdf5
     - ./../data/ACS/acs_cr_deposition.hdf5
   astroquery:
@@ -14,10 +14,10 @@ WFC3_UVIS:
     - ./../crrejtab/WFC3/mastDownload/HST/*/*flt.fits
   hdf5_files:
     - ./../data/WFC3/wfc3_cr_affected_pixels.hdf5
-    - ./../data/WFC3/wfc3_shapes.hdf5
-    - ./../data/WFC3/wfc3_sizes.hdf5
+    - ./../data/WFC3/wfc3_cr_shapes.hdf5
+    - ./../data/WFC3/wfc3_cr_sizes.hdf5
     - ./../data/WFC3/wfc3_cr_rate.hdf5
-    - ./../data/WFC3/wfc3_deposition.hdf5
+    - ./../data/WFC3/wfc3_cr_deposition.hdf5
   astroquery:
     - '2009-05-01'
 STIS_CCD:
@@ -25,10 +25,10 @@ STIS_CCD:
     - ./../crrejtab/STIS/mastDownload/HST/*/*flt.fits
   hdf5_files:
     - ./../data/STIS/stis_cr_affected_pixels.hdf5
-    - ./../data/STIS/stis_shapes.hdf5
-    - ./../data/STIS/stis_sizes.hdf5
+    - ./../data/STIS/stis_cr_shapes.hdf5
+    - ./../data/STIS/stis_cr_sizes.hdf5
     - ./../data/STIS/stis_cr_rate.hdf5
-    - ./../data/STIS/stis_deposition.hdf5
+    - ./../data/STIS/stis_cr_deposition.hdf5
   astroquery:
   - '1997-02-01'
 subgrp_names:
