--- a/CONFIG/pipeline_config.yaml
+++ b/CONFIG/pipeline_config.yaml
@@ -31,6 +31,17 @@ STIS_CCD:
     - ./../data/STIS/stis_cr_deposition.hdf5
   astroquery:
   - '1997-02-01'
+WFPC2_WFC:
+  search_pattern:
+    - ./../crrejtab/WFPC2/mastDownload/HST/*/*flt.fits
+    hdf5_files:
+    - ./../data/WFPC2/wfpc2_cr_affected_pixels.hdf5
+    - ./../data/WFPC2/wfpc2_cr_shapes.hdf5
+    - ./../data/WFPC2/wfpc2_cr_sizes.hdf5
+    - ./../data/WFPC2/wfpc2_cr_rate.hdf5
+    - ./../data/WFPC2/wfpc2_cr_deposition.hdf5
+  astroquery:
+  - '1995-01-01'
 subgrp_names:
   - cr_affected_pixels
   - shapes
