lots of refactoring to handle WFPC2 data. There are two ways to generate the label, segmentation mapping vs binary thresholding, and I've settled on binary thresholding as it removes hot pixels much easier

--- a/CONFIG/pipeline_config.yaml
+++ b/CONFIG/pipeline_config.yaml
@@ -42,9 +42,9 @@ STIS_CCD:
     - ./../data/STIS/stis_cr_deposition.hdf5
   astroquery:
   - '1997-02-01'
-WFPC2_WFC:
+WFPC2:
   search_pattern:
-    - ./../crrejtab/WFPC2/mastDownload/HST/*/*flt.fits
+    - ./../crrejtab/WFPC2/mastDownload/HST/*/*c0m.fits
   hdf5_files:
     - ./../data/WFPC2/wfpc2_cr_affected_pixels.hdf5
     - ./../data/WFPC2/wfpc2_cr_rate.hdf5
