--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
 /data/
-/lib/*png
-/lib/*gif
-/crrejtab/*/mastDownload/
+/pipeline/*png
+/pipeline/*gif
+/crrejtab/
 /crrejtab/*/*gif
 /crrejtab/*/*txt
 /crrejtab/WFC3/IR_TEST_DATA/*
-/lib/*fits
-/lib/*tra
+/pipeline/*fits
+/pipeline/*tra
 /plots/*png
 /plots/*gif
+/doc/build/
+/pipeline/__pycache__/
+/pipeline/*/__pycache__/
+/pipeline/.ipynb_checkpoints/
+/pipeline/.DS_Store
+.DS_Store
+/CONFIG/processed*txt
+*.fits
+.idea/
