--- a/CONFIG/pipeline_config.yaml
+++ b/CONFIG/pipeline_config.yaml
@@ -1,30 +1,32 @@
 ACS_WFC:
-  search_pattern: /data/ACS/WFC/mastDownload/HST/*/*flt.fits
+  search_pattern: '/data/ACS/WFC/mastDownload/HST/*/*flt.fits'
   hdf5_files:
-    cr_affected_pixels: /results/ACS/acs_wfc_cr_affected_pixels.hdf5
-    incident_cr_rate: /results/ACS/acs_wfc_cr_rate.hdf5
-    sizes: /results/ACS/acs_wfc_cr_sizes.hdf5
-    shapes: /results/ACS/acs_wfc_cr_shapes.hdf5
-    energy_deposited: /results/ACS/acs_wfc_cr_energy_deposited.hdf5
+    cr_affected_pixels: '/results/ACS/acs_wfc_cr_affected_pixels.hdf5'
+    incident_cr_rate: '/results/ACS/acs_wfc_cr_rate.hdf5'
+    sizes: '/results/ACS/acs_wfc_cr_sizes.hdf5'
+    shapes: '/results/ACS/acs_wfc_cr_shapes.hdf5'
+    energy_deposited: '/results/ACS/acs_wfc_cr_energy_deposited.hdf5'
   astroquery:
     date_range: '2002-03-01'
     SubGroupDescription:
       - 'FLT'
       - 'SPT'
-    download_dir: /data/ACS/WFC/
-  crrejtab: /data/ACS/29p1548cj_crr_WFC.fits
+    download_dir: '/data/ACS/WFC/'
+  crrejtab: '/data/ACS/29p1548cj_crr_WFC.fits'
   instr_params:
     extnums: [1,2]
     readout_time: 50.0
+    gain_keyword: 'ATODGN*'
+    detector_size: 37.748
 
 ACS_HRC:
-  search_pattern: /data/ACS/HRC/mastDownload/HST/*/*flt.fits
+  search_pattern: '/data/ACS/HRC/mastDownload/HST/*/*flt.fits'
   hdf5_files:
-    cr_affected_pixels: /results/ACS/acs_hrc_cr_affected_pixels.hdf5
-    incident_cr_rate: /results/ACS/acs_hrc_cr_rate.hdf5
-    sizes: /results/ACS/acs_hrc_cr_sizes.hdf5
-    shapes: /results/ACS/acs_hrc_cr_shapes.hdf5
-    energy_deposited: /results/ACS/acs_hrc_cr_energy_deposited.hdf5
+    cr_affected_pixels: '/results/ACS/acs_hrc_cr_affected_pixels.hdf5'
+    incident_cr_rate: '/results/ACS/acs_hrc_cr_rate.hdf5'
+    sizes: '/results/ACS/acs_hrc_cr_sizes.hdf5'
+    shapes: '/results/ACS/acs_hrc_cr_shapes.hdf5'
+    energy_deposited: '/results/ACS/acs_hrc_cr_energy_deposited.hdf5'
   astroquery:
     date_range:
       - '2002-03-01'
@@ -32,20 +34,22 @@ ACS_HRC:
     SubGroupDescription:
       - 'FLT'
       - 'SPT'
-    download_dir: /data/ACS/HRC/
-  crrejtab: /data/ACS/n4e12510j_crr_HRC.fits
+    download_dir: '/data/ACS/HRC/'
+  crrejtab: '/data/ACS/n4e12510j_crr_HRC.fits'
   instr_params:
     extnums: [1]
     readout_time: 15.0
+    gain_keyword: 'ATODGN*'
+    detector_size: 4.624
 
 NICMOS_NIC1:
-  search_pattern: /data/NICMOS/NIC1/mastDownload/HST/*/*ima.fits
+  search_pattern: '/data/NICMOS/NIC1/mastDownload/HST/*/*ima.fits'
   hdf5_files:
-    cr_affected_pixels: /results/NICMOS/nicmos_nic1_cr_affected_pixels.hdf5
-    incident_cr_rate: /results/NICMOS/nicmos_nic1_cr_rate.hdf5
-    sizes: /results/NICMOS/nicmos_nic1_cr_sizes.hdf5
-    shapes: /results/NICMOS/nicmos_nic1_cr_shapes.hdf5
-    energy_deposited: /results/NICMOS/nicmos_nic1_cr_energy_deposited.hdf5
+    cr_affected_pixels: '/results/NICMOS/nicmos_nic1_cr_affected_pixels.hdf5'
+    incident_cr_rate: '/results/NICMOS/nicmos_nic1_cr_rate.hdf5'
+    sizes: '/results/NICMOS/nicmos_nic1_cr_sizes.hdf5'
+    shapes: '/results/NICMOS/nicmos_nic1_cr_shapes.hdf5'
+    energy_deposited: '/results/NICMOS/nicmos_nic1_cr_energy_deposited.hdf5'
   astroquery:
     date_range:
       - '1997-02-01'
@@ -53,17 +57,16 @@ NICMOS_NIC1:
     SubGroupDescription:
       - 'IMA'
       - 'SPT'
-    download_dir: /data/NICMOS/NIC1/
-
+    download_dir: '/data/NICMOS/NIC1/'
 
 NICMOS_NIC2:
-  search_pattern: /data/NICMOS/NIC2/mastDownload/HST/*/*ima.fits
+  search_pattern: '/data/NICMOS/NIC2/mastDownload/HST/*/*ima.fits'
   hdf5_files:
-    cr_affected_pixels: /results/NICMOS/nicmos_nic2_cr_affected_pixels.hdf5
-    incident_cr_rate: /results/NICMOS/nicmos_nic2_cr_rate.hdf5
-    sizes: /results/NICMOS/nicmos_nic2_cr_sizes.hdf5
-    shapes: /results/NICMOS/nicmos_nic2_cr_shapes.hdf5
-    energy_deposited: /results/NICMOS/nicmos_nic2_cr_energy_deposited.hdf5
+    cr_affected_pixels: '/results/NICMOS/nicmos_nic2_cr_affected_pixels.hdf5'
+    incident_cr_rate: '/results/NICMOS/nicmos_nic2_cr_rate.hdf5'
+    sizes: '/results/NICMOS/nicmos_nic2_cr_sizes.hdf5'
+    shapes: '/results/NICMOS/nicmos_nic2_cr_shapes.hdf5'
+    energy_deposited: '/results/NICMOS/nicmos_nic2_cr_energy_deposited.hdf5'
   astroquery:
     date_range:
       - '1997-02-01'
@@ -71,16 +74,16 @@ NICMOS_NIC2:
     SubGroupDescription:
       - 'IMA'
       - 'SPT'
-    download_dir: /data/NICMOS/NIC2/
+    download_dir: '/data/NICMOS/NIC2/'
 
 NICMOS_NIC3:
-  search_pattern: /data/NICMOS/NIC3/mastDownload/HST/*/*ima.fits
+  search_pattern: '/data/NICMOS/NIC3/mastDownload/HST/*/*ima.fits'
   hdf5_files:
-    cr_affected_pixels: /results/NICMOS/nicmos_nic3_cr_affected_pixels.hdf5
-    incident_cr_rate: /results/NICMOS/nicmos_nic3_cr_rate.hdf5
-    sizes: /results/NICMOS/nicmos_nic3_cr_sizes.hdf5
-    shapes: /results/NICMOS/nicmos_nic3_cr_shapes.hdf5
-    energy_deposited: /results/NICMOS/nicmos_nic3_cr_energy_deposited.hdf5
+    cr_affected_pixels: '/results/NICMOS/nicmos_nic3_cr_affected_pixels.hdf5'
+    incident_cr_rate: '/results/NICMOS/nicmos_nic3_cr_rate.hdf5'
+    sizes: '/results/NICMOS/nicmos_nic3_cr_sizes.hdf5'
+    shapes: '/results/NICMOS/nicmos_nic3_cr_shapes.hdf5'
+    energy_deposited: '/results/NICMOS/nicmos_nic3_cr_energy_deposited.hdf5'
   astroquery:
     date_range:
       - '1997-02-01'
@@ -88,69 +91,76 @@ NICMOS_NIC3:
     SubGroupDescription:
       - 'IMA'
       - 'SPT'
-    download_dir: /data/NICMOS/NIC3/
+    download_dir: '/data/NICMOS/NIC3/'
 
 STIS_CCD:
-  search_pattern: /data/STIS/CCD/mastDownload/HST/*/*flt.fits
+  search_pattern: '/data/STIS/CCD/mastDownload/HST/*/*flt.fits'
   hdf5_files:
-    cr_affected_pixels: /results/STIS/stis_ccd_cr_affected_pixels.hdf5
-    incident_cr_rate: /results/STIS/stis_ccd_cr_rate.hdf5
-    sizes: /results/STIS/stis_ccd_cr_sizes.hdf5
-    shapes: /results/STIS/stis_ccd_cr_shapes.hdf5
-    energy_deposited: /results/STIS/stis_ccd_cr_energy_deposited.hdf5
+    cr_affected_pixels: '/results/STIS/stis_ccd_cr_affected_pixels.hdf5'
+    incident_cr_rate: '/results/STIS/stis_ccd_cr_rate.hdf5'
+    sizes: '/results/STIS/stis_ccd_cr_sizes.hdf5'
+    shapes: '/results/STIS/stis_ccd_cr_shapes.hdf5'
+    energy_deposited: '/results/STIS/stis_ccd_cr_energy_deposited.hdf5'
   astroquery:
     date_range: '1997-02-01'
     SubGroupDescription:
       - 'FLT'
       - 'SPT'
-    download_dir: /data/STIS/CCD/
-  crrejtab: /data/STIS/j3m1403io_crr.fits
+    download_dir: '/data/STIS/CCD/'
+  crrejtab: '/data/STIS/j3m1403io_crr.fits'
   instr_params:
     extnums: [1]
     readout_time: 15.0
+    gain_keyword: 'ATODGAIN'
+    detector_size: 4.624
 
 WFC3_IR:
-  search_pattern: /data/WFC3/IR/mastDownload/HST/*/*ima.fits
+  search_pattern: '/data/WFC3/IR/mastDownload/HST/*/*ima.fits'
   hdf5_files:
-    cr_affected_pixels: /results/WFC3/wfc3_ir_cr_affected_pixels.hdf5
-    incident_cr_rate: /results/WFC3/wfc3_ir_cr_rate.hdf5
-    sizes: /results/WFC3/wfc3_ir_cr_sizes.hdf5
-    shapes: /results/WFC3/wfc3_ir_cr_shapes.hdf5
-    energy_deposited: /results/WFC3/wfc3_ir_cr_energy_deposited.hdf5
+    cr_affected_pixels: '/results/WFC3/wfc3_ir_cr_affected_pixels.hdf5'
+    incident_cr_rate: '/results/WFC3/wfc3_ir_cr_rate.hdf5'
+    sizes: ' /results/WFC3/wfc3_ir_cr_shapes.hdf5'
+    energy_deposited: '/results/WFC3/wfc3_ir_cr_energy_deposited.hdf5'
   astroquery:
     date_range: '2009-05-01'
     SubGroupDescription:
       - 'IMA'
       - 'SPT'
-    download_dir: /data/WFC3/IR/
+    download_dir: '/data/WFC3/IR/'
+  instr_params:
+    extnums: [1]
+    readout_time: 0.0
+    detector_size: 3.331
 
 WFC3_UVIS:
-  search_pattern: /data/WFC3/UVIS/mastDownload/HST/*/*flt.fits
+  search_pattern: '/data/WFC3/UVIS/mastDownload/HST/*/*flt.fits'
   hdf5_files:
-    cr_affected_pixels: /results/WFC3/wfc3_uvis_cr_affected_pixels.hdf5
-    incident_cr_rate: /results/WFC3/wfc3_uvis_cr_rate.hdf5
-    sizes: /results/WFC3/wfc3_uvis_cr_sizes.hdf5
-    shapes: /results/WFC3/wfc3_uvis_cr_shapes.hdf5
-    energy_deposited: /results/WFC3/wfc3_uvis_cr_energy_deposited.hdf5
+    cr_affected_pixels: '/results/WFC3/wfc3_uvis_cr_affected_pixels.hdf5'
+    incident_cr_rate: '/results/WFC3/wfc3_uvis_cr_rate.hdf5'
+    sizes: '/results/WFC3/wfc3_uvis_cr_sizes.hdf5'
+    shapes: '/results/WFC3/wfc3_uvis_cr_shapes.hdf5'
+    energy_deposited: '/results/WFC3/wfc3_uvis_cr_energy_deposited.hdf5'
   astroquery:
     date_range: '2009-05-01'
     SubGroupDescription:
       - 'FLT'
       - 'SPT'
-    download_dir: /data/WFC3/UVIS/
-  crrejtab: /data/WFC3/n9i1435li_crr_UVIS.fits
+    download_dir: '/data/WFC3/UVIS/'
+  crrejtab: '/data/WFC3/n9i1435li_crr_UVIS.fits'
   instr_params:
     extnums: [1,2]
     readout_time: 50.0
+    gain_keyword: 'ATODGAIN'
+    detector_size: 37.804
 
 WFPC2:
-  search_pattern: /data/WFPC2/mastDownload/HST/*/*c0m.fits
+  search_pattern: '/data/WFPC2/mastDownload/HST/*/*c0m.fits'
   hdf5_files:
-    cr_affected_pixels: /results/WFPC2/wfpc2_cr_affected_pixels.hdf5
-    incident_cr_rate: /results/WFPC2/wfpc2_cr_rate.hdf5
-    sizes: /results/WFPC2/wfpc2_cr_sizes.hdf5
-    shapes: /results/WFPC2/wfpc2_cr_shapes.hdf5
-    energy_deposited: /results/WFPC2/wfpc2_cr_energy_deposited.hdf5
+    cr_affected_pixels: '/results/WFPC2/wfpc2_cr_affected_pixels.hdf5'
+    incident_cr_rate: '/results/WFPC2/wfpc2_cr_rate.hdf5'
+    sizes: '/results/WFPC2/wfpc2_cr_sizes.hdf5'
+    shapes: '/results/WFPC2/wfpc2_cr_shapes.hdf5'
+    energy_deposited: '/results/WFPC2/wfpc2_cr_energy_deposited.hdf5'
   astroquery:
     date_range:
       - '1994-01-01'
@@ -158,10 +168,12 @@ WFPC2:
     SubGroupDescription:
       - 'C0M'
       - 'SHM'
-    download_dir: /data/WFPC2/
+    download_dir: '/data/WFPC2/'
   instr_params:
     extnums: [1,2,3,4]
     readout_time: 30
+    gain_keyword: 'ATODGN*'
+    detector_size: 5.76
 
 grp_names:
   cr_affected_pixels: cr_affected_pixels
