--- a/pipeline/aws_env_linux.yml
+++ b/pipeline/aws_env_linux.yml
@@ -4,137 +4,126 @@ channels:
   - http://ssb.stsci.edu/astroconda
   - defaults
 dependencies:
-  - acstools=3.0.0
-  - asn1crypto=0.24.0
-  - astropy=3.1.2
-  - atomicwrites=1.3.0
-  - attrs=19.1.0
-  - beautifulsoup4=4.7.1
-  - blas=1.1
-  - bokeh=1.0.4
-  - boto3=1.9.111
-  - botocore=1.12.111
-  - ca-certificates=2019.3.9
-  - calcos=3.3.4
-  - certifi=2019.3.9
-  - cffi=1.12.2
-  - cfitsio=3.440
-  - click=7.0
-  - cloudpickle=0.8.0
-  - cryptography=2.5
-  - cycler=0.10.0
-  - cython=0.29.6
-  - cytoolz=0.9.0.1
-  - dask=1.1.4
-  - dask-core=1.1.4
-  - decorator=4.3.2
-  - distributed=1.26.0
-  - docutils=0.14
-  - fontconfig=2.13.1
-  - freetype=2.9.1
-  - h5py=2.9.0
-  - hdf5=1.10.4
-  - heapdict=1.0.0
-  - hstcal=2.2.0
-  - icu=58.2
-  - idna=2.8
-  - imageio=2.4.1
-  - intel-openmp=2019.1
-  - jinja2=2.10
-  - jmespath=0.9.3
-  - jpeg=9c
-  - kiwisolver=1.0.1
-  - libcxx=7.0.0
-  - libedit=3.1.20170329
-  - libffi=3.2.1
-  - libgcc=4.8.5
-  - libgcc-ng=7.3.0
-  - libgfortran-ng=7.2.0
-  - libiconv=1.15
-  - libopenblas=0.2.20
-  - libpng=1.6.36
-  - libstdcxx-ng=7.3.0
-  - libtiff=4.0.10
-  - libuuid=2.32.1
-  - libxml2=2.9.8
-  - llvm-meta=7.0.0
-  - locket=0.2.0
-  - markupsafe=1.1.1
-  - matplotlib=3.0.3
-  - matplotlib-base=3.0.3
-  - mkl=2019.1
-  - mkl_fft=1.0.10
-  - mkl_random=1.0.2
-  - more-itertools=4.3.0
-  - msgpack-python=0.6.1
-  - ncurses=6.1
-  - networkx=2.2
-  - numpy=1.16.2
-  - numpy-base=1.14.3
-  - olefile=0.46
-  - openblas=0.3.3
-  - openssl=1.1.1b
-  - packaging=19.0
-  - pandas=0.24.1
-  - partd=0.3.9
-  - photutils=0.6
-  - pillow=5.4.1
-  - pip=19.0.3
-  - pluggy=0.9.0
-  - psutil=5.5.1
-  - py=1.8.0
-  - pycparser=2.19
-  - pyopenssl=19.0.0
-  - pyparsing=2.3.1
-  - pyqt=4.11.4
-  - pysocks=1.6.8
-  - pytest=4.3.0
-  - pytest-arraydiff=0.3
-  - pytest-astropy=0.4.0
-  - pytest-doctestplus=0.1.3
-  - pytest-openfiles=0.3.1
-  - pytest-remotedata=0.3.1
-  - python=3.6.7
-  - python-dateutil=2.8.0
-  - pytz=2018.9
-  - pywavelets=1.0.2
-  - pyyaml=3.13
-  - qt=4.8.7
-  - readline=7.0
-  - s3transfer=0.2.0
-  - scikit-image=0.14.2
-  - scikit-learn=0.20.3
-  - scipy=1.2.1
-  - setuptools=40.8.0
-  - sip=4.18
-  - six=1.12.0
-  - sortedcontainers=2.1.0
-  - soupsieve=1.8
-  - sqlite=3.26.0
-  - stistools=1.1
-  - stsci.tools=3.4.13
-  - tblib=1.3.2
-  - tk=8.6.9
-  - toolz=0.9.0
-  - tornado=6.0.1
-  - urllib3=1.24.1
-  - wfc3tools=1.3.5
-  - wheel=0.33.1
-  - xz=5.2.4
-  - yaml=0.1.7
-  - zict=0.1.4
-  - zlib=1.2.11
-  - zstd=1.3.3
-  - pip:
-    - astroquery==0.3.10.dev0
-    - chardet==3.0.4
-    - entrypoints==0.3
-    - html5lib==1.0.1
-    - jeepney==0.4
-    - keyring==18.0.0
-    - requests==2.21.0
-    - secretstorage==3.1.1
-    - stsci-tools==3.4.13
-    - webencodings==0.5.1
-prefix: /user/nmiles/miniconda3/envs/aws_env
+  - acstools=3.0.0=py36_0
+  - asn1crypto=0.24.0=py36_1003
+  - astropy=3.1.2=py36h14c3975_0
+  - atomicwrites=1.3.0=py_0
+  - attrs=19.1.0=py_0
+  - beautifulsoup4=4.7.1=py36_1001
+  - blas=1.1=openblas
+  - bokeh=1.0.4=py36_1000
+  - boto3=1.9.111=py_0
+  - botocore=1.12.111=py_0
+  - ca-certificates=2019.3.9=hecc5488_0
+  - calcos=3.3.4=py36_0
+  - certifi=2019.3.9=py36_0
+  - cffi=1.12.2=py36hf0e25f4_1
+  - cfitsio=3.440=2
+  - click=7.0=py_0
+  - cloudpickle=0.8.0=py_0
+  - cryptography=2.5=py36h9d9f1b6_1
+  - cycler=0.10.0=py_1
+  - cython=0.29.6=py36hf484d3e_0
+  - cytoolz=0.9.0.1=py36h14c3975_1001
+  - dask=1.1.4=py_0
+  - dask-core=1.1.4=py_0
+  - decorator=4.3.2=py_0
+  - distributed=1.26.0=py36_1
+  - docutils=0.14=py36_1001
+  - fontconfig=2.13.1=he4413a7_1000
+  - freetype=2.9.1=h94bbf69_1005
+  - h5py=2.9.0=nompi_py36hf008753_1102
+  - hdf5=1.10.4=nompi_h11e915b_1105
+  - heapdict=1.0.0=py36_1000
+  - hstcal=2.2.0=0
+  - icu=58.2=hf484d3e_1000
+  - idna=2.8=py36_1000
+  - imageio=2.4.1=py36_1000
+  - intel-openmp=2019.1=144
+  - jinja2=2.10=py_1
+  - jmespath=0.9.3=py_1
+  - jpeg=9c=h14c3975_1001
+  - kiwisolver=1.0.1=py36h6bb024c_1002
+  - libcxx=7.0.0=h6bb024c_1002
+  - libedit=3.1.20170329=hf8c457e_1001
+  - libffi=3.2.1=hf484d3e_1005
+  - libgcc=4.8.5=2
+  - libgcc-ng=7.3.0=hdf63c60_0
+  - libgfortran-ng=7.2.0=hdf63c60_3
+  - libiconv=1.15=h14c3975_1004
+  - libopenblas=0.2.20=h9ac9557_7
+  - libpng=1.6.36=h84994c4_1000
+  - libstdcxx-ng=7.3.0=hdf63c60_0
+  - libtiff=4.0.10=h9022e91_1002
+  - libuuid=2.32.1=h14c3975_1000
+  - libxml2=2.9.8=h143f9aa_1005
+  - llvm-meta=7.0.0=0
+  - locket=0.2.0=py_2
+  - markupsafe=1.1.1=py36h14c3975_0
+  - matplotlib=3.0.3=py36_0
+  - matplotlib-base=3.0.3=py36h167e16e_0
+  - mkl=2019.1=144
+  - mkl_fft=1.0.10=py36_0
+  - mkl_random=1.0.2=py36_0
+  - more-itertools=4.3.0=py36_1000
+  - msgpack-python=0.6.1=py36h6bb024c_0
+  - ncurses=6.1=hf484d3e_1002
+  - networkx=2.2=py_1
+  - numpy=1.16.2=py36_blas_openblash1522bff_0
+  - numpy-base=1.14.3=py36h2b20989_0
+  - olefile=0.46=py_0
+  - openblas=0.3.3=h9ac9557_1001
+  - openssl=1.1.1b=h14c3975_1
+  - packaging=19.0=py_0
+  - pandas=0.24.1=py36hf484d3e_0
+  - partd=0.3.9=py_0
+  - photutils=0.6=py36h14c3975_1000
+  - pillow=5.4.1=py36h00a061d_1000
+  - pip=19.0.3=py36_0
+  - pluggy=0.9.0=py_0
+  - psutil=5.5.1=py36h14c3975_0
+  - py=1.8.0=py_0
+  - pycparser=2.19=py36_1
+  - pyopenssl=19.0.0=py36_0
+  - pyparsing=2.3.1=py_0
+  - pyqt=4.11.4=py36_3
+  - pysocks=1.6.8=py36_1002
+  - pytest=4.3.0=py36_0
+  - pytest-arraydiff=0.3=py_0
+  - pytest-astropy=0.4.0=py_0
+  - pytest-doctestplus=0.1.3=py_0
+  - pytest-openfiles=0.3.1=py_0
+  - pytest-remotedata=0.3.1=py_0
+  - python=3.6.7=h381d211_1004
+  - python-dateutil=2.8.0=py_0
+  - pytz=2018.9=py_0
+  - pywavelets=1.0.2=py36h3010b51_0
+  - pyyaml=3.13=py36h14c3975_1001
+  - qt=4.8.7=2
+  - readline=7.0=hf8c457e_1001
+  - s3transfer=0.2.0=py36_0
+  - scikit-image=0.14.2=py36hf484d3e_1
+  - scikit-learn=0.20.3=py36_blas_openblashebff5e3_0
+  - scipy=1.2.1=py36_blas_openblash1522bff_0
+  - setuptools=40.8.0=py36_0
+  - sip=4.18=py36_1
+  - six=1.12.0=py36_1000
+  - sortedcontainers=2.1.0=py_0
+  - soupsieve=1.8=py36_0
+  - sqlite=3.26.0=h67949de_1001
+  - stistools=1.1=py36_2
+  - stsci.tools=3.4.13=py36_1
+  - tblib=1.3.2=py_1
+  - tk=8.6.9=h84994c4_1000
+  - toolz=0.9.0=py_1
+  - tornado=6.0.1=py36h14c3975_0
+  - urllib3=1.24.1=py36_1000
+  - wfc3tools=1.3.5=py36_0
+  - wheel=0.33.1=py36_0
+  - xz=5.2.4=h14c3975_1001
+  - yaml=0.1.7=h14c3975_1001
+  - zict=0.1.4=py_0
+  - zlib=1.2.11=h14c3975_1004
+  - zstd=1.3.3=1
+prefix: /home/ec2-user/miniconda3/envs/aws_env
 
